# hawkeye-nineagents

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEMO.md  DEPLOYMENT.md  DEPLOYMENT_RETRO.md  LICENSE  ML.md  Makefile  NEXT_STEPS.md  QUICKSTART.md  README.md  ROADMAP.md  ROUND1_GAP_ANALYSIS.md  docker-compose.prod.yml  docker-compose.yml  ml-idea.ipynb  simclr-pretrain.ipynb  syn-data.ipynb  thgnn-train.ipynb
.github/workflows/: ci.yml  deploy.yml
artifacts/: feat_clean_scaler.json  feature_config.json  feature_stats.json  node_id_maps.json  simclr_metadata.json  thgnn_metadata.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_alert_fusion_components.py  0003_narrative_provenance.py
backend/app/: auth.py  config.py  deps.py  logging_setup.py  main.py
backend/app/api/: alerts.py  employees.py  graph.py  health.py  narrative.py  replay.py  stats.py  ws_routes.py
backend/app/consumers/: event_consumer.py
backend/app/models/: __init__.py  alert.py  db.py  employee.py  narrative.py
backend/app/prompts/: investigation_narrative.jinja2
backend/app/schemas/: __init__.py
backend/app/scripts/: preflight_check.py  seed.py  verify_fusion.py
backend/app/services/: alert_service.py  attestation_service.py  embedding_service.py  feature_aggregator.py  feature_labels.py  graph_service.py  narrative_service.py  replay_service.py  risk_levels.py  scoring.py
backend/app/ws/: manager.py
backend/tests/: conftest.py  test_alert_dedup.py  test_embedding_service.py  test_feature_labels.py  test_narrative_fallback.py  test_risk_levels.py
data/: synthesis_metadata.json
deploy/: bootstrap-vps.sh  deploy.sh
docs/screenshots/: README.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
infra/kafka/: create-topics.sh
infra/keycloak/: realm-export.json
infra/neo4j/: init.cypher
infra/nginx/: hawkeye.nineagents.in.conf
infra/postgres/: init.sql
(+37 files in other folders)
