[project]
name = "hawkeye-backend"
version = "0.1.0"
description = "HAWKEYE — insider-fraud detection backend"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.5.0",
  "sqlalchemy[asyncio]>=2.0.34",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "redis>=5.0.8",
  "neo4j>=5.23.0",
  "confluent-kafka>=2.5.3",
  "lightgbm>=4.5.0",
  "shap>=0.46.0",
  "pandas>=2.2.2",
  "pyarrow>=17.0.0",
  "numpy>=1.26.4,<2.0.0",
  "groq>=0.11.0",
  "tenacity>=9.0.0",
  "structlog>=24.4.0",
  "python-jose[cryptography]>=3.3.0",
  "python-keycloak>=4.6.2",
  "httpx>=0.27.0",
  "websockets>=13.0.1",
  "python-multipart>=0.0.10",
  "jinja2>=3.1.4",
  "prometheus-client>=0.20.0",
  "orjson>=3.10.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "pytest-mock>=3.14.0",
  "ruff>=0.6.4",
  "mypy>=1.11.2",
  "types-python-jose",
  "aiosqlite>=0.20.0",
]

[tool.ruff]
line-length = 130
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "T20"]
ignore = [
  "S101",      # asserts in tests
  "B008",      # FastAPI Depends() pattern
  "ASYNC230",  # blocking open() inside an executor is fine for our JSONL reader
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "T20"]
"app/scripts/*" = ["T20"]
# narrative_service has long Jinja-fallback string literals; scoring has long
# type signatures with default args. Both are deliberate.
"app/services/narrative_service.py" = ["E501"]
"app/services/scoring.py" = ["E501"]
"app/services/graph_service.py" = ["E501", "RUF001"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
ignore_missing_imports = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
